--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,6 @@
 automationName=UiAutomator2
 platformName=Android
 platformVersion=12.0 (S) - API 31
-deviceName=Pixel 7 Pro
+deviceName=Pixel 8 Pro
+phoneNumber=6505551212
+password=Wise.123
