--- a/configuration.properties
+++ b/configuration.properties
@@ -2,5 +2,5 @@ automationName=UiAutomator2
 platformName=Android
 platformVersion=12.0 (S) - API 31
 deviceName=Pixel 8 Pro
-phoneNumber=6505551212
-password=Wise.123
+phoneNumber=5556501212
+password=Wise123*
